<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="recipeDisplayViewModel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.RecipeDisplayViewmodel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="407dp"
                    android:cropToPadding="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_conversion_absoluteHeight="407dp"
                    tools:layout_conversion_absoluteWidth="411dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp"
                    tools:srcCompat="@tools:sample/backgrounds/scenic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:paddingRight="10dp"
                    android:paddingLeft="10dp"
                    >

                    <TextView
                        android:id="@+id/textView_recipe_title"
                        android:layout_marginTop="10dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="5"
                        android:padding="10dp"
                        android:text=""
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        tools:layout_conversion_absoluteHeight="27dp"
                        tools:layout_conversion_absoluteWidth="411dp"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="417dp" />

                    <ImageButton
                        android:id="@+id/imageButton_favourite"
                        android:layout_marginTop="10dp"
                        android:layout_width="60dp"
                        android:layout_height="match_parent"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        app:srcCompat="@drawable/ic_favorite_white_24dp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_creation_timestamp_title"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/creation_time_headline" />

                    <TextView
                        android:id="@+id/textView_creation_timestamp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.creationTimeStamp)}"
                        android:textAlignment="center"
                        android:textSize="13sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textView_recipe_prep_time_Title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/preparationtime"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/textView_recipe_prep_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.preparationTime)}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/textView_recipe_cook_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@string/cookingtime"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="normal"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/textView_recipe_cook_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.cookingTime)}"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="TextViewEdits" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_portionen_headline"
                        android:layout_marginLeft="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/portions_headline"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/textView_portions"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="17dp"
                        android:textSize="20sp"
                        android:text="@{String.valueOf(recipeDisplayViewModel.recipe.portions)}"/>

                    <Button
                        android:id="@+id/button_portion_plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="+" />

                    <Button
                        android:id="@+id/button_portion_minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text="-" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_recipe_tags"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:textAlignment="center"
                    android:text="tags"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/textView_ingredient_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@{recipeDisplayViewModel.recipe.ingredientsText}"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView_recipe_prep_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:padding="10dp"
                    android:text="@{recipeDisplayViewModel.recipe.preparation}"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button_report_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reportRecipe" />
            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>